# represent

./: .coverage  .coverage.192.168.1.112.45439.XtQJWCbx  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DATALOADER_MIGRATION_GUIDE.md  GEMINI.md  Makefile  README.md  TODO.md  bug.md  coverage.xml  main.py  new_configs_design.py  pyproject.toml  test_dbn_processing.py
.github/ISSUE_TEMPLATE/: todo-item.md
.github/workflows/: ci.yml  performance.yml
data/pipeline_outputs/: PARQUET_ISSUE_RESOLVED.md  README.md
demo_configs/: custom.json
docs/: CURRENCY_CONFIG.md  EXAMPLES_RUNNER.md  NORMALIZATION_REQUIREMENTS.md  VERSION_BUMPING_FIX.md
examples/: README.md  api_usage_examples.py  background_training_demo.py  complete_workflow_demo.py  comprehensive_demo.py  create_comprehensive_report.py  currency_config_demo.py  custom_config_example.yaml  dataloader_performance_demo.py  dataloader_performance_report.md  dataloader_real_data_example.py  demonstrate_feature_extraction.py  fast_demo.py  generate_visualization.py  production_dataloader_example.py  pytorch_inference_example.py  pytorch_quickstart.py  pytorch_streaming_example.py  pytorch_training_example.py  real_data_README.md  run_demo.py  simple_background_usage.py  simple_currency_config_demo.py  simplified_config_demo.py  symbol_split_merge_demo.py
examples/01_getting_started/: README.md  new_config_demo.py  simple_api_demo.py
examples/01_getting_started/outputs/: simple_api_config.json
examples/02_global_thresholds/: README.md  global_threshold_classification_demo.py  global_threshold_demo.py  simple_global_threshold_demo.py  verify_row_classification.py
examples/03_data_processing/: README.md  dbn_to_parquet_example.py  fixed_optimized_demo.py  streamlined_classifier_demo.py
examples/04_ml_training/: README.md  streamlined_dataloader_demo.py  streamlined_dataloader_simple_demo.py
examples/05_visualization/: README.md  extended_features_visualization.py
examples/05_visualization/extended_features_output/: feature_analysis_report.txt
examples/06_performance_analysis/: README.md
examples/06_performance_analysis/random_access_evaluation/: lazy_dataloader_random_access_benchmark.py  minimal_test.py  visualization_enhanced_benchmark.py
examples/07_advanced_features/: README.md
examples/07_advanced_features/sample_outputs/: optimized_classification_validation_summary.md  optimized_detailed_results.json  streamlined_classifier_results.json  (+1 more)
examples/basic_usage/: simple_currency_config_demo.py
examples/classification_analysis/: ARCHITECTURE_UPDATE_SUMMARY.md  README.md  README_FINAL.md  complete_pipeline_demo.py  dynamic_config_demo.py  final_demo.py  final_quantile_validation.py  realistic_market_demo.py  simple_classification_demo.py
examples/complete_workflow_output/: complete_workflow_report.html
examples/comprehensive_demo_output/: comprehensive_demo_report.html  comprehensive_demo_report.md  demo_results.json
examples/dataloader_performance/: dataloader_performance_demo.py  dataloader_performance_report.md
examples/demo_output/: demo_output_report.html
examples/extended_features/: extended_features_visualization.py
examples/extended_features_output/: feature_analysis_report.txt
examples/fast_output/: fast_output_report.html
examples/new_architecture/: dbn_to_parquet_example.py
examples/pytorch_integration/: pytorch_streaming_example.py  pytorch_training_example.py
examples/random_access_evaluation/: README.md  lazy_dataloader_random_access_benchmark.py  minimal_test.py  quick_test.py  test_visualizations.py  usage_examples.py
examples/real_data/: parquet_dataloader_example.py
examples/real_data_output/: real_data_analysis_report.md
examples/visualization/: generate_visualization.py
examples_report/: examples_report.html  examples_results.json
notebooks/: market_depth_extraction_micro_pips.ipynb  market_depth_extraction_micro_pips.py  market_depth_extraction_micro_pips_var.ipynb
represent/: __init__.py  api.py  classification_config_generator.py  config.py  configs.py  constants.py  converter.py  core.py  data_structures.py  dataloader.py  dataloader_old.py  dataset_builder.py  global_threshold_calculator.py  lazy_dataloader.py  market_depth_processor.py  parquet_classifier.py  pipeline.py  unlabeled_converter.py
represent/configs/: audusd.json  audusd.yaml  eurjpy.json  eurjpy.yaml  eurusd.json  gbpusd.json  gbpusd.yaml  usdjpy.json
scripts/: README_production_processing.md  analyze_classification_results.py  convert_dbn_to_parquet.py  process_production_datasets.py  quick_classification_check.py  run_all_examples.py  test_version_sync.py
tests/: conftest.py  test_benchmarks.py  test_core.py  test_global_threshold_calculator.py  test_integration.py  test_optimized_implementation.py  test_reference_implementation.py
tests/e2e/: __init__.py  test_data_compatibility.py  test_real_data_processing.py  test_symbol_split_merge_e2e.py  test_synthetic_e2e.py
tests/fixtures/: sample_data.py
tests/integration/: __init__.py  test_market_depth_integration.py  test_pipeline_integration.py
tests/unit/: __init__.py  reference_implementation.py  test_api.py  test_api_coverage.py  test_benchmarks.py  test_classification_config_generator.py  test_constants.py  test_converter.py  test_core.py  test_core_coverage.py  test_coverage_boost.py  test_data_structures.py  test_dataloader.py  test_dataset_builder.py  test_dataset_builder_comprehensive.py  test_dataset_builder_focused_coverage.py  test_extended_features.py  test_focused_configs.py  test_global_threshold_calculator.py  test_integration.py  test_lazy_dataloader_new.py  test_legacy_dataloader.py  test_new_architecture.py  test_optimized_implementation.py  test_parquet_classifier.py  test_parquet_classifier_coverage.py  test_parquet_classifier_focused_coverage.py  test_pipeline.py  test_pipeline_coverage.py  test_pydantic_config.py  test_reference_implementation.py  test_represent_config.py  test_signed_normalization.py  test_unlabeled_converter.py  test_unlabeled_converter_coverage.py
(+8 files in other folders)
