[project]
name = "represent"
version = "1.0.0"
description = "LOB features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]
[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "pyright>=1.1.355",
    "commitizen>=3.13.0",
    "python-semantic-release>=8.0.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "pydantic-settings",
    "pyright>=1.1.403",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]

[tool.pyright]
typeCheckingMode = "strict"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"

[tool.semantic_release]
version_variables = ["pyproject.toml:version", "represent/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_parser = "conventional"
build_command = "uv build"
upload_to_pypi = false
upload_to_release = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
